@@ -27,6 +27,7 @@ if(_console_key==''){_console_key=58;}
 if(_display_as_binary==''){_display_as_binary=0;}
 if(_preload_checks==''){_preload_checks=1;}
 #if(_want_caption_status==''){_want_caption_status=0;}
+if(_want_exif_orientation==''){_want_exif_orientation=1;}
 if(ascale==''){ascale="1.0";}
 if(_use_mipmaps==''){_use_mipmaps=1;}
 #
